04/27/16

-Changing AbstractAlignment.py parameters to match blasr output format (-m) 5.
-Writing read_stack, readArray, etc. into PacbioSubgraph.py